--- a/SMKToolbox.csproj
+++ b/SMKToolbox.csproj
@@ -12,6 +12,22 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +47,27 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>SMKWorkshop.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>F5385424283EC65AA55A57D263BFF4DD83E6A5B7</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>SMKToolbox_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>true</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>SMKToolbox_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -55,6 +92,29 @@
     </Compile>
     <Compile Include="Layouts.cs" />
     <Compile Include="Palettes.cs" />
+    <Compile Include="RankingNumbersEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RankingNumbersEditor.Designer.cs">
+      <DependentUpon>RankingNumbersEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Rom\Compression\ByteDictionary.cs" />
+    <Compile Include="Rom\Compression\ChunkNode.cs" />
+    <Compile Include="Rom\Compression\ChunkNodeCollection.cs" />
+    <Compile Include="Rom\Compression\Codec.cs" />
+    <Compile Include="Rom\Compression\Decompressor.cs" />
+    <Compile Include="Rom\Compression\FastCompressor.cs" />
+    <Compile Include="Rom\Compression\ICompressor.cs" />
+    <Compile Include="Rom\Compression\IDecompressor.cs" />
+    <Compile Include="Rom\Compression\OptimalCompressor.cs" />
+    <Compile Include="Rom\Region.cs" />
+    <Compile Include="Rom\Utility\CharacterSet.cs" />
+    <Compile Include="Rom\Utility\EventArgs.cs" />
+    <Compile Include="Rom\Utility\IMapBuffer.cs" />
+    <Compile Include="Rom\Utility\Map.cs" />
+    <Compile Include="Rom\Utility\Range.cs" />
+    <Compile Include="Rom\Utility\TextConverter.cs" />
+    <Compile Include="Rom\Utility\Utilities.cs" />
     <Compile Include="Tiles.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -85,9 +145,25 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="SMKToolbox_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SMKWorkshop.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
