--- a/SMKToolbox.csproj
+++ b/SMKToolbox.csproj
@@ -83,6 +83,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AssetManager.Designer.cs">
+      <DependentUpon>AssetManager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DemoMaker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DemoMaker.Designer.cs">
+      <DependentUpon>DemoMaker.cs</DependentUpon>
+    </Compile>
     <Compile Include="Files.cs" />
     <Compile Include="LayoutEditor.cs">
       <SubType>Form</SubType>
@@ -124,6 +136,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DemoMaker.resx">
+      <DependentUpon>DemoMaker.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
