--- a/SMKToolbox.csproj
+++ b/SMKToolbox.csproj
@@ -61,10 +61,10 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>SMKToolbox_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
@@ -127,6 +127,7 @@
     <Compile Include="Rom\Utility\Range.cs" />
     <Compile Include="Rom\Utility\TextConverter.cs" />
     <Compile Include="Rom\Utility\Utilities.cs" />
+    <Compile Include="TileDrawing.cs" />
     <Compile Include="Tiles.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -136,6 +137,30 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrackManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TrackManager.Designer.cs">
+      <DependentUpon>TrackManager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TrackManager\TM_CourseEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TrackManager\TM_CourseEditor.Designer.cs">
+      <DependentUpon>TM_CourseEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TrackManager\TM_NewCatalog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TrackManager\TM_NewCatalog.Designer.cs">
+      <DependentUpon>TM_NewCatalog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TrackManager\TM_OpenDirect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TrackManager\TM_OpenDirect.Designer.cs">
+      <DependentUpon>TM_OpenDirect.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="DemoMaker.resx">
       <DependentUpon>DemoMaker.cs</DependentUpon>
     </EmbeddedResource>
@@ -151,6 +176,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TrackManager.resx">
+      <DependentUpon>TrackManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TrackManager\TM_CourseEditor.resx">
+      <DependentUpon>TM_CourseEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TrackManager\TM_NewCatalog.resx">
+      <DependentUpon>TM_NewCatalog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TrackManager\TM_OpenDirect.resx">
+      <DependentUpon>TM_OpenDirect.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
